--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "aws s3 sync build/ s3://dashboard-minik-richardson --acl public-read",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
