--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "moment": "^2.24.0",
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-bootstrap-button-loader": "^2.0.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-vis": "^1.11.7",
